--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,13 @@
 server.port= 1010
 
 	
+#mysql 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/featuresector
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#thymeleaf 
+spring.thymeleaf.cache=false
