--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
-#server config 
 server.port= 1010
-
-	
-#mysql 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/featuresector
+spring.datasource.url = jdbc:mysql://localhost:3306/featuresector?useSSL=false
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
-#thymeleaf 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
 spring.thymeleaf.cache=false
